small fixes on mobile menu

--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,10 @@ body{
 	.menuButton{
 		display: inline-block;
 	}
+
+	.foodLink{
+		text-decoration: none;
+	}
 }
 
 @media only screen and (max-width: 620px) {
